--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ ignore = [
 
 [tool.ruff.lint.isort]
 known-first-party = ["nipd-data-generator"]  # UPDATE: Should match project name above
-combine-as-imports = true
+# combine-as-imports = true # Optional: group imports by type (stdlib, third-party, local)
 force-sort-within-sections = true
 
 [tool.ruff.lint.pydocstyle]
